<resources>
    <string name="app_name">What Event Ireland - Android App</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="event_title">Event Title (required)</string>
    <string name="event_category_required">Event Category (required)</string>
    <string name="event_location_required">Event Location (required)</string>
    <string name="event_description_required">Event Description (required)</string>
    <string name="event_venue_required">Event Venue (required)</string>
    <string name="event_price_required">Event Price (required)</string>
    <string name="event_time_date_required">Event Time/Date (required)</string>
    <string name="event_id">Event ID</string>
    <string name="display_event_details">Display Event Details</string>
    <string name="update_event_details">Update Event Details</string>
    <string name="delete_event">Delete Event</string>
    <string name="summary_of_all_events">Summary of All Events</string>
    <string name="delete_your_account">Delete your Account</string>
    <string name="registerr">Register</string>
    <string name="update">Update</string>
    <string name="choose_event_image">Choose Event Image</string>
    <string name="event_image">Event Image</string>
    <string name="what_event_ireland">What Event Ireland</string>
    <string name="search">Search</string>
</resources>