<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp">

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <TextView
            android:id="@+id/text_view_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@id/button_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_logout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_input_edit_text_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            app:layout_constraintStart_toEndOf="@id/text_view_event_category"
            app:layout_constraintTop_toBottomOf="@id/button_logout">


        </Spinner>

        <TextView
            android:id="@+id/text_view_event_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_category_required"
            app:layout_constraintEnd_toStartOf="@id/spinner_category"
            app:layout_constraintTop_toTopOf="@id/spinner_category">

        </TextView>

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_view_event_location"
            app:layout_constraintTop_toBottomOf="@id/spinner_category">


        </Spinner>

        <TextView
            android:id="@+id/text_view_event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_location_required"
            app:layout_constraintEnd_toStartOf="@id/spinner_location"
            app:layout_constraintTop_toTopOf="@id/spinner_location">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_event_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description_required">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_event_venue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_event_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_event_venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_venue_required">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_event_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_event_venue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_event_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_price_required"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- can change the date/time edit text to a picker (uses fragment)  -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_event_date_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_event_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_time_date_required"
                android:inputType="datetime">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_event_image"
            app:layout_constraintStart_toEndOf="@id/image_view_event_image_preview"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_event_date_time" />

        <ImageView
            android:id="@+id/image_view_event_image_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_event_date_time"
            tools:src="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_choose_image">

        </Button>

        <TextView
            android:id="@+id/text_view_main_output"
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:background="#D3D3D3"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_register">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_event_id_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_main_output">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_main_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_id"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_display_event_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_event_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_event_id_input">

        </Button>

        <Button
            android:id="@+id/button_update_event_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_event_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_display_event_details">

        </Button>

        <Button
            android:id="@+id/button_delete_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_update_event_details">

        </Button>

        <Button
            android:id="@+id/button_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:text="@string/delete_your_account"
            app:layout_constraintStart_toEndOf="@id/button_delete_event"
            app:layout_constraintTop_toBottomOf="@id/button_update_event_details">

        </Button>

        <Button
            android:id="@+id/button_summary_of_all_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_of_all_events"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_delete_event">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>